// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> component renders with a DARK theme 1`] = `
.c0 {
  background-color: #484848;
  border-color: #707070;
  border-radius: 4px;
  cursor: pointer;
  font: 400 1rem 'Karla','sans-serif';
  height: 48px;
  max-width: 240px;
  outline: none;
  padding: 0 1.5rem;
  width: 37.5%;
}

.c0 span {
  color: #f5f5f5;
}

.c0:hover {
  background-color: #888888;
  border-color: #c4c4c4;
}

.c0:hover span {
  color: #ffffff;
}

<button
  className="c0"
  id="test"
  onClick={[MockFunction]}
>
  <span>
    Test Button
  </span>
</button>
`;

exports[`<Button /> component renders with a LIGHT theme 1`] = `
.c0 {
  background-color: #e8e8e8;
  border-color: #cccccc;
  border-radius: 4px;
  cursor: pointer;
  font: 400 1rem 'Karla','sans-serif';
  height: 48px;
  max-width: 240px;
  outline: none;
  padding: 0 1.5rem;
  width: 37.5%;
}

.c0 span {
  color: #707070;
}

.c0:hover {
  background-color: #e22a23;
  border-color: #aaaaaa;
}

.c0:hover span {
  color: #ffffff;
}

<button
  className="c0"
  id="test"
  onClick={[MockFunction]}
>
  <span>
    Test Button
  </span>
</button>
`;
